@startuml
skinparam packageStyle rectangle
skinparam shadowing false
skinparam lineType polyline


skinparam classAttributeIconSize 0

class ListBookingRequestUI{}

class ListBookingRequestController{
+getAgentAdvertisements(email)
+getVisitRequest(list, dStart, dEnd)
}

class Repositories{
+getInstance()
+getAdvertisementRepository()
}

class AdvertisementRepository{
-List<Advertisement> advertisementList
+getVisitRequestList(list, dStart, dEnd)
+getAgentAdvertisements(email)
}

class Advertisement{
-String dateOfAdvertisement
-Request request
-Commission commission
-ArrayList<PurchaseOrder> purchaseOrderList
-ArrayList<VisitRequest> visitRequestList
-String status
-Store store

}

class VisitRequest{
-String name
-String phoneNumber
-String dateOfVisit
-String timeSlotStart
-String timeSlotEnd
-String message
-String status
}

ListBookingRequestUI ..> ListBookingRequestController
ListBookingRequestController ..> Repositories
ListBookingRequestController ..> AdvertisementRepository

Repositories -> "1" AdvertisementRepository

AdvertisementRepository "1"-->"*" Advertisement

Advertisement "1" -->"*" VisitRequest

ListBookingRequestController ..> Advertisement

ListBookingRequestController ....> VisitRequest


@enduml